# blog_web_project

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
blog/blog/: settings.py
blog/blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog/blog_app/migrations/: 0001_initial.py  0002_comment.py  0002_post_content.py  0003_alter_comment_body.py  0003_remove_post_content_alter_post_text_comment.py
blog/blog_app/templates/: add_category.html  add_comment.html  add_post.html  article_list.html  base.html  categories.html  delete_post.html  home.html  update_post.html
blog/blog_app/templates/static/css/: logo.css
blog/blog_app/tests/: collection.py  conftest.py  test_urls.py  test_view 2.py  test_view.py
blog/core/: settings.py  urls.py
blog/core/management/commands/: check_migrations.py
blog/member/: urls.py
