[tool.poetry]
name = "blog-web-project"
version = "0.1.0"
description = ""
authors = ["Andrey Stoletov <stoletov314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.4"
setuptools = "^67.6.0"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.1"
django-ckeditor = "^6.5.1"
pre-commit = "^3.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = "market_maker"
known_local_folder = "market_maker/"
line_length  = 120
profile = "black"

[tool.black]
line_length = 120
include = '\.pyi?$'
exclude = '''
/(
  | \.venv
  | migrations
)/
'''

[tool.flake8]
max-line-length = 120
filename = "*.py"
exclude = ".mypy_cache/ .pytest_cache/ venv/ **/migrations/ **/__init__.py"


[tool.mypy]
files = "blog"
ignore_missing_imports = true
exclude = '''
(?x)^(
  | .*/migrations/.*
  | .*/tests/.*
)$
'''
