[tool.poetry]
name = "blog-web-project"
version = "0.1.0"
description = ""
authors = ["Andrey Stoletov <stoletov314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0"
setuptools = "^68.0.0"
psycopg2-binary = "^2.9.6"
django-ckeditor = "^6.5.1"
pytest-factoryboy = "^2.3.1"
psycopg2 = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = [".", "blog_web_project"]
python_files =["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = "market_maker"
known_local_folder = "market_maker/"
line_length  = 120
profile = "black"

[tool.black]
line_length = 120
include = '\.pyi?$'
exclude = '''
/(
  | \.venv
  | migrations
)/
'''

[tool.flake8]
max-line-length = 120
filename = "*.py"
exclude = ".mypy_cache/ .pytest_cache/ venv/ **/migrations/ **/__init__.py"


[tool.mypy]
files = "blog"
ignore_missing_imports = true
exclude = '''
(?x)^(
  | .*/migrations/.*
  | .*/tests/.*
)$
'''
